Added the prelimenary investigation steps to identify which columns had more than 0 null values.

--- a/missingValues.ipynb
+++ b/missingValues.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -14,7 +14,12 @@
       "MAE from Approach 2 (Imputation):\n",
       "179816.89508731329\n",
       "MAE from Approach 3 (An extension to Imputation): \n",
-      "178927.503183954\n"
+      "178927.503183954\n",
+      "(10864, 12)\n",
+      "Car               49\n",
+      "BuildingArea    5156\n",
+      "YearBuilt       4307\n",
+      "dtype: int64\n"
      ]
     }
    ],
@@ -88,7 +93,13 @@
     "\n",
     "print(\"MAE from Approach 3 (An extension to Imputation): \")\n",
     "print(score_dataset(imputed_X_train_plus, imputed_X_val_plus, y_train, y_val))\n",
-    "\n"
+    "\n",
+    "#shape of the training data(rows, cols)\n",
+    "print(X_train.shape)\n",
+    "\n",
+    "# Number of missing values in each columns of training data - Preliminary investigation\n",
+    "missing_val_count_by_column = (X_train.isnull().sum())\n",
+    "print(missing_val_count_by_column[missing_val_count_by_column>0])"
    ]
   },
   {
