Added only the top features that was chosen from chi-squared test. Results: Still the classification was made perfect F1 score was 1.0

--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -331,19 +331,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "new commit\n"
+      "Average F1-score (KFold): 1.0\n",
+      "Confusion Matrix:\n",
+      " [[112468      0      0]\n",
+      " [     0   9553      0]\n",
+      " [     0      0  34030]]\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00    112468\n",
+      "           1       1.00      1.00      1.00      9553\n",
+      "           2       1.00      1.00      1.00     34030\n",
+      "\n",
+      "    accuracy                           1.00    156051\n",
+      "   macro avg       1.00      1.00      1.00    156051\n",
+      "weighted avg       1.00      1.00      1.00    156051\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "print(\"new commit\")"
+    "from sklearn.metrics import f1_score, classification_report, confusion_matrix\n",
+    "\"\"\"\n",
+    "In the below code, we select only the top features that we got from chi-squared tests.\n",
+    "Only the columns that are making lot of impact are included.\n",
+    "Additionally, the columns named '0' to '5' are included because we get from One-Hot Encoder\n",
+    "and they are essential for predicting.\n",
+    "\"\"\"\n",
+    "top_features = ['fwd_iat.min','fwd_iat.max', 'fwd_iat.tot', 'fwd_iat.avg', 'fwd_iat.std',\n",
+    "                'bwd_iat.max', 'bwd_iat.tot', 'bwd_iat.avg', 'bwd_iat.std',\n",
+    "                'flow_iat.min', 'flow_iat.max', 'flow_iat.tot', 'flow_iat.avg',\n",
+    "                'flow_iat.std', 'payload_bytes_per_second',\n",
+    "                'bwd_bulk_rate', 'active.min', 'active.max', 'active.tot', 'active.avg',\n",
+    "                'active.std', 'idle.min', 'idle.max', 'idle.tot', 'idle.avg',\n",
+    "                'idle.std','0','1','2','3','4','5']  # Assuming these are already numerical\n",
+    "\n",
+    "X_train_top_features = OH_X_train[top_features]\n",
+    "X_valid_top_features = OH_X_valid[top_features]\n",
+    "\n",
+    "kfold = StratifiedKFold(n_splits=5, shuffle=True, random_state=0)  # 5-fold stratified cross-validation\n",
+    "f1_scores = []\n",
+    "for train_index, test_index in kfold.split(X_train_top_features, y_train):\n",
+    "  # Train on fold data\n",
+    "  fold_train_x, fold_train_y = X_train_top_features.iloc[train_index], y_train.iloc[train_index]\n",
+    "  rfc_model = RandomForestClassifier(n_estimators=100, random_state=0)\n",
+    "  rfc_model.fit(fold_train_x, fold_train_y)\n",
+    "\n",
+    "  # Make predictions on validation fold data\n",
+    "  fold_test_x, fold_test_y = X_train_top_features.iloc[test_index], y_train.iloc[test_index]\n",
+    "  predictions = rfc_model.predict(fold_test_x)\n",
+    "\n",
+    "  # Calculate F1-score\n",
+    "  f1 = f1_score(fold_test_y, predictions, average='weighted')\n",
+    "  f1_scores.append(f1)\n",
+    "\n",
+    "# Print average F1-score across folds\n",
+    "print(\"Average F1-score (KFold):\", np.mean(f1_scores))\n",
+    "\n",
+    "# Confusion Matrix on validation set\n",
+    "y_pred = rfc_model.predict(X_valid_top_features)\n",
+    "y_valid_np = y_valid.to_numpy()\n",
+    "confusion_matrix = confusion_matrix(y_valid_np, y_pred)\n",
+    "print(\"Confusion Matrix:\\n\", confusion_matrix)\n",
+    "\n",
+    "# Classification Report on validation set (using F1-score)\n",
+    "print(\"Classification Report:\")\n",
+    "print(classification_report(y_valid, y_pred))\n"
    ]
   },
   {
