Added the comment about previous code in first line of comment.

--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -51,6 +51,9 @@
    ],
    "source": [
     "\"\"\"\n",
+    "\n",
+    "Preliminary analysis for this project is present at: https://github.com/swapneilbasutkar/Final-Project/blob/main/network_intrusion_detection.ipynb \n",
+    "\n",
     "This code does the following:\n",
     "    1. Drops the unwanted columns which are object type and don't have a real impact on the model\n",
     "    2. Combines 2 dataset captured over the span of 2 years\n",
